# PlayCat

./: CMakeLists.txt  README.md
client/: README.md  ServoController.ino
server/: .gitignore  .install-opencv.sh.un~  CMakeLists.txt  README.md  install-opencv.sh  install-opencv.sh~
server/src/: CatFinder.cpp  LaserPointerFinder.h  main.cpp
server/src/ServoControl/: EnumSerial.cpp  EnumSerial.h  ServoControl.cpp  ServoControl.h
src/: LaserPointerFinder.cpp  main.cpp
src/MJPEGServer/: MJPEGServer.cpp  MJPEGServer.h
src/MJPEGWriter/: MJPEGWriter.cpp  MJPEGWriter.h
